fixed some mobile issues on iPhone

--- a/src/mixins.scss
+++ b/src/mixins.scss
@@ -1,5 +1,7 @@
+@import 'variables';
+
 @mixin clamp-font() {
-	font-size: clamp(1rem, 3rem, 3rem);
+	font-size: clamp(0.5rem, 2.5rem, 4rem);
 }
 
 @mixin section-header {
@@ -8,6 +10,11 @@
 	color: var(--secondary-font-color);
 	margin-top: 2rem;
 	padding: 0;
+	line-height: normal;
+
+	// @media (max-width: $device-xsmall) {
+	// 	font-size: 2rem;
+	// }
 }
 
 @mixin supports-backdrop-filter() {
